# workshop-rl1-introduction

./: .gitignore  CHANGELOG.md  README.md  docker-compose.yml
.github/workflows/: docker-build.yml
backend/: .coveragerc  Dockerfile  app.py  pyproject.toml  pytest.ini
backend/algorithms/: q_learning.py
backend/environments/: environment_manager.py
backend/tests/: __init__.py  conftest.py
backend/tests/test_algorithms/: test_q_learning.py
backend/tests/test_api/: test_endpoints.py
backend/tests/test_environments/: __init__.py
backend/tests/test_training/: __init__.py
dev/: CHANGELOG.md
docs/: ARCHITECTURE.md  INSTALLATION_LINUX.md  INSTALLATION_MACOS.md  INSTALLATION_WINDOWS.md
frontend/: README.md
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/: AlgorithmInfo.css  AlgorithmInfo.jsx  ControlButtons.css  ControlButtons.jsx  EnvironmentInfo.css  EnvironmentInfo.jsx  EnvironmentViewer.css  EnvironmentViewer.jsx  ParameterPanel.css  ParameterPanel.jsx  RewardChart.css  RewardChart.jsx
frontend/src/components/__tests__/: ParameterPanel.test.js
frontend/src/content/: algorithms.json  environments.json
frontend/src/utils/: contentLoader.js
tutorials/: docker-workflow.md
