[project]
name = "workshop-rl1-introduction-backend"
version = "0.1.0"
description = "Backend for Workshop RL1 Introduction - Educational RL visualization tool"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "gymnasium>=0.29.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "pygame>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-flask>=1.2.0",
    "pytest-mock>=3.11.0",
]
